# jetson_orin_nx_20260129

MoViNet-pytorch/: benchmark.py  benchmark_stream.py  (+4 more)
RMinte-Orin-TensorRT-EDGE-LLM/: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  LICENSE  README.md  README_RMINTE.md  README_RMINTE_EN.md  pyproject.toml  requirements.txt
RMinte-Orin-TensorRT-EDGE-LLM/cmake/: aarch64_linux_toolchain.cmake
RMinte-Orin-TensorRT-EDGE-LLM/cpp/: CMakeLists.txt
RMinte-Orin-TensorRT-EDGE-LLM/cpp/common/: bindingNames.h  checkMacros.h  cudaUtils.h  fileUtils.cpp  fileUtils.h  hashUtils.h  logger.h  mmapReader.cpp  mmapReader.h  safetensorsUtils.cpp  safetensorsUtils.h  stringUtils.cpp  stringUtils.h  tensor.cpp  tensor.h  tensorUtils.cpp  trtUtils.h  version.cpp  version.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/common/: vectorizedTypes.cuh
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/contextAttentionKernels/: contextFMHARunner.cpp  contextFMHARunner.h  fmhaParams_v2.h  utilKernels.cu  utilKernels.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/decodeAttentionKernels/: decoderXQARunner.cpp  decoderXQARunner.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/embeddingKernels/: embeddingKernels.cu  embeddingKernels.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/kvCacheUtilKernels/: kvCacheUtilsKernels.cu  kvCacheUtilsKernels.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/posEncoding/: applyRopeWriteKV.cu  applyRopeWriteKV.h  initializeCosSinCache.cu  initializeCosSinCache.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/preprocessKernels/: imageUtilKernels.cu  imageUtilKernels.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/kernels/speculative/: batchEvictKernels.cu  batchEvictKernels.h  eagleAcceptKernels.cu  eagleAcceptKernels.h  eagleUtilKernels.cu  eagleUtilKernels.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/multimodal/: imageUtils.cpp  imageUtils.h  internViTRunner.cpp  modelTypes.h  multimodalRunner.cpp  phi4mmViTRunner.cpp  qwenViTRunner.cpp
RMinte-Orin-TensorRT-EDGE-LLM/cpp/plugins/attentionPlugin/: attentionPlugin.cpp  attentionPlugin.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/plugins/int4GroupwiseGemmPlugin/: int4GroupwiseGemmPlugin.cpp  int4GroupwiseGemmPlugin.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/profiling/: metrics.h  timer.cpp  timer.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/runtime/: eagleDraftEngineRunner.cpp  eagleDraftEngineRunner.h  imageUtils.cpp  imageUtils.h  linearKVCache.cpp  linearKVCache.h  llmEngineRunner.cpp  llmInferenceRuntime.cpp  llmInferenceRuntime.h  llmInferenceSpecDecodeRuntime.cpp  llmRuntimeUtils.cpp  llmRuntimeUtils.h
RMinte-Orin-TensorRT-EDGE-LLM/cpp/tokenizer/: preTokenizer.cpp  tokenEncoder.cpp  tokenizer.cpp  tokenizerUtils.cpp  tokenizerUtils.h  unicodeData.cpp  unicodeData.h
RMinte-Orin-TensorRT-EDGE-LLM/docs/: Doxyfile  README.md  requirements.txt
RMinte-Orin-TensorRT-EDGE-LLM/docs/source/: conf.py  helper.py
RMinte-Orin-TensorRT-EDGE-LLM/examples/: CMakeLists.txt
RMinte-Orin-TensorRT-EDGE-LLM/examples/accuracy/: README.md  requirements.txt
RMinte-Orin-TensorRT-EDGE-LLM/examples/llm/: CMakeLists.txt  INPUT_FORMAT.md
RMinte-Orin-TensorRT-EDGE-LLM/examples/multimodal/: CMakeLists.txt
RMinte-Orin-TensorRT-EDGE-LLM/examples/server/: CMakeLists.txt  llm_inference_server.cpp  llm_server.cpp  openai_api_server.py  openai_server.py  start_server.sh
RMinte-Orin-TensorRT-EDGE-LLM/examples/utils/: CMakeLists.txt  memoryMonitor.cpp  memoryMonitor.h  profileFormatter.cpp  profileFormatter.h
RMinte-Orin-TensorRT-EDGE-LLM/kernelSrcs/fmha_v2/: README.md  gen_fmha_cubin.patch
RMinte-Orin-TensorRT-EDGE-LLM/kernelSrcs/xqa/: README.md  adapt_source.patch  gen_cubins.py  mha.cu  utils.cuh
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/: __init__.py  common.py  version.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/chat_templates/: __init__.py  chat_template.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/llm_models/: __init__.py  model_utils.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/onnx_export/: __init__.py  config_export.py  lora.py  onnx_utils.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/quantization/: __init__.py  llm_quantization.py  quantization_utils.py  visual_quantization.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/scripts/: __init__.py  export_draft.py  export_llm.py  export_visual.py  insert_lora.py  merge_lora.py  process_lora_weights.py  quantize_draft.py  quantize_llm.py  reduce_vocab.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/visual_models/: __init__.py  internvl3_model.py  phi4mm_model.py  qwen2_5_vl_model.py  qwen2_vl_model.py  qwen3_vl_model.py
RMinte-Orin-TensorRT-EDGE-LLM/tensorrt_edgellm/vocab_reduction/: vocab_reduction.py
RMinte-Orin-TensorRT-EDGE-LLM/tests/: README.md  conftest.py  pytest.ini  pytest_helpers.py  requirements.txt  valid_precisions.py
RMinte-Orin-TensorRT-EDGE-LLM/tests/defs/: config.py  test_common.py  test_llm_pipeline.py  test_model_export.py  test_package.py  test_vlm_pipeline.py
RMinte-Orin-TensorRT-EDGE-LLM/tests/test_cases/: llm_basic.json  llm_lora.json  vlm_basic.json  vlm_lora.json
RMinte-Orin-TensorRT-EDGE-LLM/tests/test_lists/: l0_eagle_export_blackwell.yml  l0_export_ampere.yml  l0_export_blackwell.yml  l0_pipeline_a30.yml  l0_pipeline_b100.yml  l0_pipeline_orin.yml  l0_pipeline_rtx5080.yml  l0_pipeline_thor_ferrix.yml  l1_export_ampere.yml  l1_pipeline_a30.yml
RMinte-Orin-TensorRT-EDGE-LLM/unittests/: batchEvictKernelTests.cu  eagleAcceptTests.cpp  eagleUtilkernelTests.cu  embeddingLookupTests.cpp  imageUtilKernelTests.cu  kvCacheUtilKernelTests.cpp  loggerTests.cpp  naiveGemmReference.cu  naiveGemmReference.h  references.cpp  references.h  ropeInitializeTests.cu  ropeWriteKvTest.cpp  rtTensorTest.cpp  safetensorsUtilsTests.cpp  samplingTests.cpp  sanityCheck.cpp  testUtils.h  timerTests.cpp  woqInt4GemmTest.cu  woqInt4GemvTest.cu  xqaAttentionDecodingTest.cu  xqaTreeAttentionDecodingTest.cu
RMinte-Orin-TensorRT-EDGE-LLM/unittests/resources/: test_safetensors.safetensors
(+372 files in other folders)
